[package]
name = "stagiaire"
version = "0.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/nthery/stagiaire"
keywords = [ "string", "interning", "symbol" ]
description = """
Yet another string interner.
"""

[features]
serde = ["dep:serde"]

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0", optional = true }

[dev-dependencies]
serde_json = "1.0"
